# SimpleCompiler

./: .clang-format  .gitignore  CFG.txt  CMakeLists.txt  CP_IR.txt  Cargo.toml  Doxygen.config  Makefile  README.md  Readme.md  cmake_install.cmake  main.cpp  makeTestZip.sh  makefile  std.s  std_cyyC  test
backend/: CodeGenerator.cpp  CodeGenerator.h  CodeGeneratorAsm.cpp  CodeGeneratorAsm.h
backend/arm32/: CodeGeneratorArm32.cpp  CodeGeneratorArm32.h  ILocArm32.cpp  ILocArm32.h  InstSelectorArm32.cpp  InstSelectorArm32.h  PlatformArm32.cpp  PlatformArm32.h
backend/simulation/: CodeSimulator.cpp  CodeSimulator.h
common/: Common.cpp  Common.h  Function.cpp  Function.h  SymbolTable.cpp  SymbolTable.h  Value.cpp  Value.h  ValueType.cpp  ValueType.h
common/drawCFG/: drawCFG.cpp  drawCFG.h
frontend/AST/: AST.cpp  AST.h  AttrType.h  FrontEndExecutor.h  Graph.cpp  Graph.h
frontend/AST/flexbison/: BisonParser.h  FlexBisonExecutor.h  FlexLexer.h  Minic.l  Minic.y
frontend/AST/flexbison/autogenerated/: MinicBison.cpp  MinicBison.h  MinicFlex.cpp  MinicFlex.h
frontend/AST/recursivedescent/: RecursiveDescentExecutor.cpp  RecursiveDescentExecutor.h  RecursiveDescentFlex.cpp  RecursiveDescentFlex.h  RecursiveDescentParser.cpp  RecursiveDescentParser.h
frontend/DragonIR/: IRCode.cpp  IRCode.h  IRGenerator.cpp  IRGenerator.h  IRInst.cpp  IRInst.h
optimizer/: ConstPropagation.cpp  ConstPropagation.h
src/: Makefile  cmake_install.cmake  main.cpp
src/back_end/: arm.cpp  arm_struct.cpp
src/front_end/: ast.cpp  parser.cpp  parser.hpp  parser.y  scanner.cpp  scanner.l
src/middle_end/: construct_ir_module.cpp  generate_ir.cpp  ir.cpp  ir_struct.cpp  ssa.cpp  ssa_struct.cpp
src/optimize/: allocate_register.cpp  arm_liveness_analysis.cpp  arm_offset_fixup.cpp  convert_ssa.cpp  dead_code_eliminate.cpp  dead_function_eliminate.cpp  dominant.cpp  generate_arm_from_ssa.cpp  global_value_numbering.cpp  instruction_combining.cpp  ir_liveness_analysis.cpp  loop_invariant_extrapolation.cpp  reach_define.cpp  simplify_cfg.cpp  ssa_simple_optimize.cpp
src/optimizer/: cond_br_to_insts.cpp  constant_propagation.cpp  dead_function_eliminate.cpp  loop_unroll.cpp  simplify_armcode.cpp
tests/: std.c  std.h  test.c
提交文档/: 编译器答辩.pptx
提交文档/编译原理试点班-实验报告及源代码-2021302968-刘航/: 编译原理试点班-实验报告-2021302968-刘航.doc
提交文档/编译原理试点班-检查记录-2021302968-刘航/: 检查记录-2021302968-刘航.docx  编译任务-2021302968-刘航.xlsx
